# InnocenceEngine

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CodeMap1.dgml  InnocenceEngine C++.sln  InnocenceEngine.sln  LICENSE  LICENSE.md  README.md  appveyor.yml  buildAssimp.bat  buildAssimpLinux.sh  buildAssimpLinux64.sh  buildAssimpMac-Xcode.sh  buildAssimpMac64-Xcode.sh  buildAssimpWin-VS15.bat  buildAssimpWin64VS15.bat  buildForLinux64.sh  buildForWin32Clang.bat  buildForWin32VS15.bat  buildForWin64VS15.bat  buildGLFWLinux.sh  buildGLFWLinux64.sh  buildGLFWMac-Xcode.sh  buildGLFWMac64-Xcode.sh  buildGLFWWin-VS15.bat  buildGLFWWin64VS15.bat  buildLinux-Clang.sh  buildLinux-CodeBlocks.sh  buildLinux.sh  buildLinux64-Clang.sh  buildLinux64-CodeBlocks.sh  buildLinux64.sh  buildMac.sh  buildMac64-XCode.sh  buildMac64.sh  buildPhysXWin-VS15.bat  buildPhysXWin-VS15.ps1  (+21 more)
Source/: CMakeLists.txt
Source/Client/: CMakeLists.txt  ClientMetaData.h  ClientMetaData.h.in  GameInstance.cpp
Source/Client/DefaultGPUBuffers/: CMakeLists.txt  DefaultGPUBuffers.cpp  DefaultGPUBuffers.h
Source/Client/LogicClient/: AnimationController.inl  CMakeLists.txt  DefaultGameClient.cpp  DefaultGameClient.h  DefaultLogicClient.cpp  DefaultLogicClient.h  DefaultLogicClientImpl.inl  Player.inl  World.inl
Source/Client/RenderingClient/: AnimationPass.cpp  AnimationPass.h  BRDFLUTMSPass.cpp  BRDFLUTMSPass.h  BRDFLUTPass.cpp  BRDFLUTPass.h  BRDFTestPass.cpp  BRDFTestPass.h  BSDFTestPass.cpp  BSDFTestPass.h  BillboardPass.cpp  BillboardPass.h  CLAUDE.md  CMakeLists.txt  DebugPass.cpp  DebugPass.h  DefaultGPUBuffers.cpp  DefaultGPUBuffers.h  DefaultRenderingClient.cpp  DefaultRenderingClient.h  DefaultRenderingClientImpl.inl  FinalBlendPass.cpp  FinalBlendPass.h  GIBakePass.cpp  GIBakePass.h  GIDataLoader.cpp  GIDataLoader.h  GIResolvePass.cpp  GIResolvePass.h  GIResolveTestPass.cpp  GIResolveTestPass.h  LightCullingPass.cpp  LightCullingPass.h  LightPass.cpp  LightPass.h  LuminanceAveragePass.cpp  LuminanceAveragePass.h  LuminanceHistogramPass.cpp  LuminanceHistogramPass.h  MotionBlurPass.cpp  (+71 more)
Source/Client/Tool/: CMakeLists.txt  InnoBaker.cpp  InnoBaker.h  InnoBakerMain.cpp  InnoReflector.cpp
Source/Editor/: CMakeLists.txt  Editor.pro  cameracomponentpropertyeditor.cpp  cameracomponentpropertyeditor.h  combolabeltext.cpp  combolabeltext.h  console.cpp  console.h  directorylistviewer.cpp  directorylistviewer.h  directorytreeviewer.cpp  directorytreeviewer.h  directoryviewer.cpp  directoryviewer.h  lightcomponentpropertyeditor.cpp  lightcomponentpropertyeditor.h  main.cpp  mainwindow.cpp  mainwindow.ui  materialcomponentpropertyeditor.cpp  materialcomponentpropertyeditor.h  menubar.cpp  menubar.h  modelcomponentpropertyeditor.cpp  modelcomponentpropertyeditor.h  propertyeditor.cpp  propertyeditor.h  renderconfigurator.cpp  renderconfigurator.h  transformcomponentpropertyeditor.cpp  transformcomponentpropertyeditor.h  transformwidget.cpp  transformwidget.h  viewport.cpp  viewport.h  visiblecomponentpropertyeditor.cpp  visiblecomponentpropertyeditor.h  worldexplorer.cpp  worldexplorer.h
Source/Editor/InnoEditor/: InnoEditor.pro  adjustlabel.cpp  adjustlabel.h  cameracomponentpropertyeditor.cpp  cameracomponentpropertyeditor.h  combolabeltext.cpp  combolabeltext.h  innodirectoryexplorer.cpp  innodirectorylistviewer.cpp  innodirectorylistviewer.h  innodirectorytreeviewer.cpp  innodirectorytreeviewer.h  innodirectoryviewer.cpp  innodirectoryviewer.h  innofileexplorer.cpp  innofileexplorer.h  innomenubar.cpp  innomenubar.h  innopropertyeditor.cpp  innopropertyeditor.h  innorenderconfigurator.cpp  innorenderconfigurator.h  innoviewport.cpp  innoviewport.h  innoworldexplorer.cpp  innoworldexplorer.h  lightcomponentpropertyeditor.cpp  lightcomponentpropertyeditor.h  mainwindow.cpp  mainwindow.ui  materialcomponentpropertyeditor.cpp  materialcomponentpropertyeditor.h  materialdatacomponentpropertyeditor.cpp  materialdatacomponentpropertyeditor.h  transformcomponentpropertyeditor.cpp  transformcomponentpropertyeditor.h  visiblecomponentpropertyeditor.cpp  visiblecomponentpropertyeditor.h
Source/Editor/InnocenceEditor/: InnocenceEditor.pro  adjustlabel.cpp  adjustlabel.h  combolabeltext.h  directionallightcomponentpropertyeditor.cpp  directionallightcomponentpropertyeditor.h  icomponentpropertyeditor.h  innoconsole.cpp  innoconsole.h  innodirectoryexplorer.cpp  innodirectoryexplorer.h  innofileexplorer.cpp  innofileexplorer.h  innopropertyeditor.cpp  innopropertyeditor.h  innorenderconfigurator.cpp  innorenderconfigurator.h  innoviewport.cpp  innoviewport.h  innoworldexplorer.cpp  innoworldexplorer.h  main.cpp  mainwindow.h  (+13 more)
Source/Engine/: CMakeLists.txt  Engine.cpp  Engine.h
Source/Game/: CMakeLists.txt  GameInstance.cpp  GameInstance.h  IGameInstance.h
Source/Test/: CMakeLists.txt  InnoTest.cpp  Test.cpp
Source/Tool/: CMakeLists.txt  GLSLParser.cpp  InnoBaker.cpp
source/: AudioEngine.cpp  AudioEngine.h  BaseLightComponent.cpp  BaseLightComponent.h  CMakeLists.txt  CameraComponent.cpp  CameraComponent.h  CoreEngine.cpp  CoreEngine.h  FragmentPrime.cpp  FragmentPrime.h  Game.cpp  Game.h  GameComponent.cpp  GameComponent.h  GameObject.cpp  GameObject.h  GeometryPrime.cpp  GeometryPrime.h  InnocenceEngine C++.sln  InnocenceEngine C++.vcxproj  InnocenceEngine C++.vcxproj.filters  Input.h  Main.cpp  Mat4f.cpp  Mat4f.h  Material.cpp  Material.h  Math.h  Mesh.cpp  Mesh.h  Quaternion.cpp  Quaternion.h  RenderingEngine.cpp  RenderingEngine.h  Shader.cpp  Shader.h  StaticMeshComponent.cpp  StaticMeshComponent.h  TestGame.cpp  (+17 more)
source/engine/: CMakeLists.txt
source/game/: CMakeLists.txt  GameInstance.cpp  GameInstance.h  IGameInstance.h  InnocenceGarden.cpp  InnocenceGarden.h  PlayerCharacter.cpp  PlayerCharacter.h  TestCase.cpp  TestCase.h
source/temp/: BaseFrameBuffer.cpp  BaseGraphicPrimitiveHeader.h  EnvironmentCaptureRenderPassSystem.h  GLFrameBuffer.cpp  GLFrameBuffer.h  GLGraphicPrimitiveHeader.h  GLMesh.h  GeometryRenderPassSystem.cpp  LightRenderPassSystem.cpp  ShadowRenderPassSystem.h
(+2826 files in other folders)
