cmake_minimum_required(VERSION 3.10.0)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

project (InnocenceEngine)

set (CMAKE_C_STANDARD 11)
set (CMAKE_CXX_STANDARD 17)
set (CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/LibArchive)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/../Bin)

set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)

include_directories("External/Include" "External/GitSubmodules/PhysX/physx/include" "External/GitSubmodules/PhysX/pxshared/include")

set(INNO_LOGIC_CLIENT DefaultLogicClient)
set(INNO_RENDERING_CLIENT DefaultRenderingClient)

set(USE_ROW_MAJOR_MEMORY_LAYOUT ON)
set(USE_COLUMN_MAJOR_MEMORY_LAYOUT OFF)

option(INNO_PLATFORM_WIN OFF)
option(INNO_PLATFORM_LINUX OFF)
option(INNO_PLATFORM_MAC OFF)
option(INNO_RENDERER_DIRECTX OFF)
option(INNO_RENDERER_OPENGL OFF)
option(INNO_RENDERER_VULKAN OFF)
option(INNO_RENDERER_METAL OFF)

if (WIN32)
set(PLATFORM_NAME Win)
set(INNO_PLATFORM_WIN ON)
set(INNO_RENDERER_DIRECTX ON)
endif (WIN32)

if (UNIX AND NOT APPLE)
set(PLATFORM_NAME Linux)
set(INNO_PLATFORM_LINUX ON)
endif (UNIX AND NOT APPLE)

if (APPLE)
set(PLATFORM_NAME Mac)
set(INNO_PLATFORM_MAC ON)
set(INNO_RENDERER_METAL ON)
endif (APPLE)

find_package(Vulkan REQUIRED)
find_package(OpenGL REQUIRED)

if (VULKAN_FOUND)
set(INNO_RENDERER_VULKAN ON)
endif (VULKAN_FOUND)

if (OPENGL_FOUND AND NOT INNO_PLATFORM_MAC)
set(INNO_RENDERER_OPENGL ON)
endif (OPENGL_FOUND AND NOT INNO_PLATFORM_MAC)

configure_file ("${CMAKE_SOURCE_DIR}/Engine/Common/Config.h.in" "${CMAKE_SOURCE_DIR}/Engine/Common/Config.h" @ONLY)
set(CMAKE_PREFIX_PATH ${CMAKE_SOURCE_DIR}/External/Lib/${PLATFORM_NAME}/${CMAKE_BUILD_TYPE})

add_subdirectory("Test")
add_subdirectory("Engine")
add_subdirectory("Client")