if (NOT INNO_PLATFORM_MAC)
add_executable(InnoGLSLParser GLSLParser.cpp)
target_link_libraries(InnoGLSLParser InnoCore)
if (INNO_PLATFORM_LINUX)
target_link_libraries(InnoGLSLParser -lX11 -lXrandr -lXinerama -lXi -lXxf86vm -lXcursor -ldl -lm -lpthread -lstdc++fs)
endif (INNO_PLATFORM_LINUX)
endif (NOT INNO_PLATFORM_MAC)

if (INNO_PLATFORM_WIN)
add_executable(InnoBaker WIN32 InnoBaker.h InnoBaker.cpp InnoBakerMain.cpp)
if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
  set_target_properties(InnoBaker PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
endif(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
target_link_libraries(InnoBaker InnoEngine)
target_link_libraries(InnoBaker InnoDefaultGPUBuffers)
endif (INNO_PLATFORM_WIN)
