add_library(ImGuiWrapper ImGuiWrapper.h ImGuiWrapper.cpp)
set_property(TARGET ImGuiWrapper PROPERTY POSITION_INDEPENDENT_CODE ON)

if (INNO_PLATFORM_WIN)
add_library(ImGuiWrapperWindowWin ImGuiWrapperWindowWin.h ImGuiWrapperWindowWin.cpp)
target_link_libraries(ImGuiWrapperWindowWin ImGui)
target_link_libraries(ImGuiWrapper ImGuiWrapperWindowWin)

add_library(ImGuiWrapperDX11 ImGuiWrapperDX11.h ImGuiWrapperDX11.cpp)
target_link_libraries(ImGuiWrapperDX11 ImGui)
target_link_libraries(ImGuiWrapper ImGuiWrapperDX11)
endif (INNO_PLATFORM_WIN)

if (OPENGL_FOUND AND NOT INNO_PLATFORM_MAC)
add_library(ImGuiWrapperGL ImGuiWrapperGL.h ImGuiWrapperGL.cpp)
set_property(TARGET ImGuiWrapperGL PROPERTY POSITION_INDEPENDENT_CODE ON)
target_link_libraries(ImGuiWrapperGL ImGui)
target_link_libraries(ImGuiWrapper ImGuiWrapperGL)
endif (OPENGL_FOUND AND NOT INNO_PLATFORM_MAC)

if (VULKAN)
add_library(ImGuiWrapperVK ImGuiWrapperVK.h ImGuiWrapperVK.cpp)
set_property(TARGET ImGuiWrapperVK PROPERTY POSITION_INDEPENDENT_CODE ON)
target_link_libraries(ImGuiWrapperVK ImGui)
target_link_libraries(ImGuiWrapper ImGuiWrapperVK)
endif (VULKAN)

if (INNO_PLATFORM_MAC)
add_library(ImGuiWrapperMT ImGuiWrapperMT.h ImGuiWrapperMT.cpp)
set_property(TARGET ImGuiWrapperMT PROPERTY POSITION_INDEPENDENT_CODE ON)
target_link_libraries(ImGuiWrapperMT ImGui)
target_link_libraries(ImGuiWrapper ImGuiWrapperMT)
endif (INNO_PLATFORM_MAC)

if (INNO_PLATFORM_LINUX)
endif (INNO_PLATFORM_LINUX)
