file(GLOB HEADERS "*.h")
file(GLOB SOURCES "*.cpp")
add_library(InnoRenderingFrontend ${HEADERS} ${SOURCES})
set_property(TARGET InnoRenderingFrontend PROPERTY POSITION_INDEPENDENT_CODE ON)
set_target_properties(InnoRenderingFrontend PROPERTIES FOLDER Engine)
target_link_libraries(InnoRenderingFrontend ImGuiWrapper)