if (INNO_PLATFORM_WIN)
add_executable(InnoBaker WIN32 InnoBaker.h InnoBaker.cpp InnoBakerMain.cpp)
set_target_properties(InnoBaker PROPERTIES FOLDER Tool)
if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
  set_target_properties(InnoBaker PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
endif(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
target_link_libraries(InnoBaker InnoEngine)
target_link_libraries(InnoBaker InnoDefaultGPUBuffers)
endif (INNO_PLATFORM_WIN)