if (INNO_PLATFORM_WIN)
add_executable(Baker WIN32 Baker.h Baker.cpp BakerMain.cpp)
set_target_properties(Baker PROPERTIES FOLDER Tool)
if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
  set_target_properties(Baker PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
endif(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
target_link_libraries(Baker Engine)
target_link_libraries(Baker DefaultGPUBuffers)
endif (INNO_PLATFORM_WIN)