if (INNO_PLATFORM_WIN)
file(GLOB HEADERS "*.h")
file(GLOB SOURCES "*.cpp")
add_executable(Baker WIN32 ${HEADERS} ${SOURCES})
set_target_properties(Baker PROPERTIES FOLDER Tool)
if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
  set_target_properties(Baker PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
endif(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
target_link_libraries(Baker Engine)
target_link_libraries(Baker DefaultGPUBuffers)
endif (INNO_PLATFORM_WIN)