if (NOT INNO_PLATFORM_MAC)
add_executable(InnoGLSLParser GLSLParser.cpp)
set_target_properties(InnoGLSLParser PROPERTIES FOLDER Tool)
target_link_libraries(InnoGLSLParser InnoCore)
if (INNO_PLATFORM_LINUX)
target_link_libraries(InnoGLSLParser -lX11 -lXrandr -lXinerama -lXi -lXxf86vm -lXcursor -ldl -lm -lpthread -lstdc++fs)
endif (INNO_PLATFORM_LINUX)
endif (NOT INNO_PLATFORM_MAC)